examples/bad/hold_for_while_move.mko
// EXPECT: use of moved
// for + while product: move inside nested while poisons after outer for.
fn consume(t: string) {}

fn main() {
    hold let s = "hi"
    for i in range 1 {
        let mut j = 0
        while j < 1 {
            consume(s)
            j = j + 1
        }
    }
    print(s)
}
